# fast_react_jwt

./: README.md
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py
backend/migrations/versions/: 7e661c44b377_start.py
