[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["A1exsandro <alex.con100trado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
SQLAlchemy = "^1.4.41"
sqlmodel = "^0.0.8"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^1.10.2"
alembic = "^1.13.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start= "app.main:start"
